chore(setups): setup backend app
- Setup file structure and server
- Setup test and CI
- Setup Husky
- Enforce Airbnb style convention with Eslint
- Integrate Slack, Github and PT

[Finishes #167960095]

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,12 @@ typings/
 
 # next.js build output
 .next
+
+# exclude package.lock.json
+package-lock.json
+
+# exclude .DS_Store
+.DS_Store
+
+# exclude dist
+./dist
