--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,15 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:12.3
-
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: postgres
+          NODE_ENV: test
+      - image: circleci/postgres:9.6.2-alpine
+        environment:
+          POSTGRES_DB: shoplink
+          POSTGRES_PASSWORD: "12345678910"
+          POSTGRES_USER: postgres
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -32,6 +40,9 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+
+       # Wait for Postgres connection to open.
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       # run tests!
       - run: yarn test
