--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,13 @@
+DATABASE_URL=
 PORT=
+SENDER_PASSWORD=
+SENDER_EMAIL_ADDRESS=
+SECRET_KEY=
+ADMIN_ONE_PASSWORD=
+ADMIN_TWO_PASSWORD=
+DEFAULT_PROFILE_IMAGE=
+ADMIN_ONE_EMAIL=
+ADMIN_TWO_EMAIL=
+HOST=
+NODE_ENV=
+LOGGING=
