--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.4",
     "express-validator": "^6.1.1",
+    "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
