--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "pg": "^7.8.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.0.0",
@@ -71,7 +74,8 @@
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.10",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "passport-mock-strategy": "^2.0.0"
   },
   "license": "MIT",
   "bugs": {
